@@ -1,5 +1,12 @@
 2006-01-26 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* include/Dialog_Progress.h,
+	  src/Dialog_Progress.cc,
+	  src/Win_GParted.cc: deal correctly with the progressdialog's
+	  delete_event.
+	
+2006-01-26 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* include/Dialog_Partition_Info.h,
 	  include/Win_GParted.h,
 	  src/Win_GParted.cc: cleanups
